@@ -10,8 +10,8 @@
  :active { color: white }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v22.1.22-cur, done by cs@nop.<br/>
-tested: 2022-01-22 22:07:19, took 00:06:32, with 100 workers, on 2642 cases, 0 failed, 0 traces, 1 retries<br/>
+release: freeRouter v22.1.23-cur, done by cs@nop.<br/>
+tested: 2022-01-23 06:19:38, took 00:06:43, with 100 workers, on 2644 cases, 0 failed, 0 traces, 7 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -21,6 +21,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-amt03.tst">conn-amt03.tst</a></td><td>success</td><td>amt over amt</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-amt04.tst">conn-amt04.tst</a></td><td>success</td><td>amt over loopback</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-anyconn.tst">conn-anyconn.tst</a></td><td>success</td><td>ip over anyconnect</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/conn-arcnet.tst">conn-arcnet.tst</a></td><td>success</td><td>arcnet encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-atmdxi.tst">conn-atmdxi.tst</a></td><td>success</td><td>atmdxi encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-atmsar.tst">conn-atmsar.tst</a></td><td>success</td><td>atmsar encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-ax2501.tst">conn-ax2501.tst</a></td><td>success</td><td>ppp with ax25</td></tr>
@@ -185,6 +186,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-icmp02.tst">conn-icmp02.tst</a></td><td>success</td><td>icmptunnel over ipv6</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-icmp03.tst">conn-icmp03.tst</a></td><td>success</td><td>icmptunnel over icmptunnel</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-icmp04.tst">conn-icmp04.tst</a></td><td>success</td><td>icmptunnel over loopback</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/conn-infini.tst">conn-infini.tst</a></td><td>success</td><td>infini encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-ipcomp01.tst">conn-ipcomp01.tst</a></td><td>success</td><td>ipcomp over ipv4</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-ipcomp02.tst">conn-ipcomp02.tst</a></td><td>success</td><td>ipcomp over ipv6</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-ipcomp03.tst">conn-ipcomp03.tst</a></td><td>success</td><td>ipcomp over ipcomp</td></tr>
